# Account-Takeover-Protection

./: README.md  database.py  key_logger.py  key_press_data.csv  keystroke_dynamics.db  latestKeylogger.py  latestModel.py  main.py  model  new_key_press_data.csv  pyproject.toml
static/js/: keystroke_tracker.js
templates/: index.html  login.html
