[tool.poetry]
name = "keylogger"
version = "0.1.0"
description = ""
authors = ["aditya <adityaharish99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
websockets = "^12.0"
sqlmodel = "^0.0.19"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
